tests/paczka1/small_fuzzy/29301671.err
Error in line 1: E8Re5h S938 12,9
Error in line 16: E8Re5h Sr38 r6,3
